k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-service-b
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: service-b 
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/instance: ingress-nginx 
    ports:
    - protocol: TCP
      port: 80
